--- a/app/globals.css
+++ b/app/globals.css
@@ -16,5 +16,15 @@
     .text-shadow {
       text-shadow: rgb(0 0 0 / 56%) 0px 3px 12px;
     }
+
+    .text-gradient {
+      background: linear-gradient(
+        to right bottom,
+        #fff 30%,
+        hsla(0, 0%, 100%, 0.38)
+      );
+      background-clip: text;
+      color: transparent;
+    }
   }
 }
